# fit4012-lab4-des-iyfifk

./: CMakeLists.txt  Makefile  README.md  des.cpp  report-1page.md
.github/grading/: test_q2.sh
logs/: .gitkeep  run
scripts/: run_sample.sh
tests/: test_des_sample.sh  test_encrypt_decrypt_roundtrip.sh  test_multiblock_padding.sh  test_sample.sh  test_tamper_negative.sh  test_wrong_key_negative.sh
